--- a/profile/src/app/pages/profile-digital/profile-digital.component.html
+++ b/profile/src/app/pages/profile-digital/profile-digital.component.html
@@ -54,7 +54,7 @@
                                             class="profile-img position-relative me-3 mb-3 mb-lg-0 profile-logo profile-logo1">
                                             <img src="../../assets/images/avatars/01.png" alt="User-Profile"
                                                 class="theme-color-default-img img-fluid rounded-pill avatar-100">
-                                            <img src="../../assets/images/avatars/{{generales.img}}" alt="User-Profile"
+                                            <img src="../../assets/images/avatars/{{generales.img}}.jpg" alt="User-Profile"
                                                 class="{{generales.tema}}-img img-fluid rounded-pill avatar-100">
                                         </div>
                                         <div class="d-flex flex-wrap align-items-center mb-3 mb-sm-0">
@@ -72,6 +72,10 @@
                                         <li class="nav-item">
                                             <a class="nav-link link-custom" data-bs-toggle="tab" href="#profile-profile"
                                                 role="tab" aria-selected="false">perfil</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link link-custom" data-bs-toggle="tab" href="#profile-qr"
+                                                role="tab" aria-selected="false">Mi QR</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -102,12 +106,12 @@
                                     <div class="card-body">
                                         <div class="text-center">
                                             <div class="user-profile">
-                                                <img src="../../assets/images/avatars/{{generales.img}}"
+                                                <img src="../../assets/images/avatars/{{generales.img}}.jpg"
                                                     alt="profile-img" class="rounded-pill avatar-130 img-fluid">
                                             </div>
                                             <div class="mt-3">
-                                                <h3 class="d-inline-block">{{generales.nombres}} {{generales.paterno}}
-                                                    {{generales.materno}}</h3>
+                                                <h4 class="d-inline-block">{{generales.nombres}} {{generales.paterno}}
+                                                    {{generales.materno}}</h4>
                                                 <p class="d-inline-block pl-3"> - {{generales.descripcion}}</p>
                                                 <p class="mb-0">{{generales.desc_perfil}}</p>
                                             </div>
@@ -123,23 +127,63 @@
                                     <div class="card-body">
                                         <div class="user-bio acerca-de">
                                         </div>
-                                        <div class="mt-2">
-                                            <h6 class="mb-1">Ubicacion:</h6>
-                                            <p>{{generales.ubicacion}}</p>
+                                        <div class="ms-3 img-center"><h5 class="text-redes">Contactame:</h5></div>
+                                        <div class="row">
+                                            <div class="mt-2 col-6 img-center">
+                                                <p><a href="tel:{{generales.telefono}}" class="text-body"><img src="../../assets/images/brands/tel.png"
+                                                    class="rounded-pill avatar-60 p-1 border bg-soft-primary img-fluid"
+                                                    alt=""></a></p>
+                                            </div>
+                                            <div class="mt-2 col-6 img-center">
+                                                <p>
+                                                    <a href="https://wa.me/{{generales.telefono}}"><svg
+                                                        xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="65" height="65"
+                                                        viewBox="0 0 48 48">
+                                                        <path fill="#fff"
+                                                            d="M4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98c-0.001,0,0,0,0,0h-0.008c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303z">
+                                                        </path>
+                                                        <path fill="#fff"
+                                                            d="M4.868,43.803c-0.132,0-0.26-0.052-0.355-0.148c-0.125-0.127-0.174-0.312-0.127-0.483l2.639-9.636c-1.636-2.906-2.499-6.206-2.497-9.556C4.532,13.238,13.273,4.5,24.014,4.5c5.21,0.002,10.105,2.031,13.784,5.713c3.679,3.683,5.704,8.577,5.702,13.781c-0.004,10.741-8.746,19.48-19.486,19.48c-3.189-0.001-6.344-0.788-9.144-2.277l-9.875,2.589C4.953,43.798,4.911,43.803,4.868,43.803z">
+                                                        </path>
+                                                        <path fill="#cfd8dc"
+                                                            d="M24.014,5c5.079,0.002,9.845,1.979,13.43,5.566c3.584,3.588,5.558,8.356,5.556,13.428c-0.004,10.465-8.522,18.98-18.986,18.98h-0.008c-3.177-0.001-6.3-0.798-9.073-2.311L4.868,43.303l2.694-9.835C5.9,30.59,5.026,27.324,5.027,23.979C5.032,13.514,13.548,5,24.014,5 M24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974 M24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974C24.014,42.974,24.014,42.974,24.014,42.974 M24.014,4C24.014,4,24.014,4,24.014,4C12.998,4,4.032,12.962,4.027,23.979c-0.001,3.367,0.849,6.685,2.461,9.622l-2.585,9.439c-0.094,0.345,0.002,0.713,0.254,0.967c0.19,0.192,0.447,0.297,0.711,0.297c0.085,0,0.17-0.011,0.254-0.033l9.687-2.54c2.828,1.468,5.998,2.243,9.197,2.244c11.024,0,19.99-8.963,19.995-19.98c0.002-5.339-2.075-10.359-5.848-14.135C34.378,6.083,29.357,4.002,24.014,4L24.014,4z">
+                                                        </path>
+                                                        <path fill="#40c351"
+                                                            d="M35.176,12.832c-2.98-2.982-6.941-4.625-11.157-4.626c-8.704,0-15.783,7.076-15.787,15.774c-0.001,2.981,0.833,5.883,2.413,8.396l0.376,0.597l-1.595,5.821l5.973-1.566l0.577,0.342c2.422,1.438,5.2,2.198,8.032,2.199h0.006c8.698,0,15.777-7.077,15.78-15.776C39.795,19.778,38.156,15.814,35.176,12.832z">
+                                                        </path>
+                                                        <path fill="#fff" fill-rule="evenodd"
+                                                            d="M19.268,16.045c-0.355-0.79-0.729-0.806-1.068-0.82c-0.277-0.012-0.593-0.011-0.909-0.011c-0.316,0-0.83,0.119-1.265,0.594c-0.435,0.475-1.661,1.622-1.661,3.956c0,2.334,1.7,4.59,1.937,4.906c0.237,0.316,3.282,5.259,8.104,7.161c4.007,1.58,4.823,1.266,5.693,1.187c0.87-0.079,2.807-1.147,3.202-2.255c0.395-1.108,0.395-2.057,0.277-2.255c-0.119-0.198-0.435-0.316-0.909-0.554s-2.807-1.385-3.242-1.543c-0.435-0.158-0.751-0.237-1.068,0.238c-0.316,0.474-1.225,1.543-1.502,1.859c-0.277,0.317-0.554,0.357-1.028,0.119c-0.474-0.238-2.002-0.738-3.815-2.354c-1.41-1.257-2.362-2.81-2.639-3.285c-0.277-0.474-0.03-0.731,0.208-0.968c0.213-0.213,0.474-0.554,0.712-0.831c0.237-0.277,0.316-0.475,0.474-0.791c0.158-0.317,0.079-0.594-0.04-0.831C20.612,19.329,19.69,16.983,19.268,16.045z"
+                                                            clip-rule="evenodd"></path>
+                                                    </svg></a>
+                                                </p>
+                                            </div>
                                         </div>
-                                        <div class="mt-2">
-                                            <h6 class="mb-1">Whatsapp:</h6>
-                                            <p><a href="https://wa.me/{{generales.telefono}}">{{generales.telefono}}</a>
-                                            </p>
+                                        <div class="row">
+                                            <div class="mt-2 col-6 img-center">
+                                                <p><a href="mailto:{{generales.correo}}?Subject=Informes" class="text-body"><img src="../../assets/images/brands/mail.png"
+                                                    class="rounded-pill avatar-60 p-1 border bg-soft-primary img-fluid"
+                                                    alt=""></a></p>
+                                            </div>
+                                            <div class="mt-2 col-6 img-center">
+                                                <p><a href="{{generales.maps}}"><img src="../../assets/images/brands/maps.png"
+                                                    class="rounded-pill avatar-60 p-1 border bg-soft-primary img-fluid"
+                                                    alt=""></a></p>
+                                            </div>
                                         </div>
-                                        <div class="mt-2">
-                                            <h6 class="mb-1">correo:</h6>
-                                            <p><a href="javascript:void(0)" class="text-body"> {{generales.correo}}</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="profile-qr" class="tab-pane fade">
+                                <div class="card">
+                                    <div class="card-header d-flex justify-content-between">
+                                        <div class="header-title">
+                                            <h4 class="card-title text-title-card">Mi QR</h4>
                                         </div>
-                                        <div class="mt-2">
-                                            <h6 class="mb-1">Contacto:</h6>
-                                            <p><a href="tel:{{generales.telefono}}" class="text-body">{{generales.telefono}}</a></p>
-                                        </div>
+                                    </div>
+                                    <div class="card-body img-center">
+                                            <img class="qr-size" src="../../assets/images/qrs/{{generales.img}}.jpeg" alt="">
+                                            <button class="compartir btn btn-black">Compartir</button>
+
                                     </div>
                                 </div>
                             </div>
